fixtures/parser/valid/inline_html.php
<h1>Hello</h1>
<?php echo "world"; ?>
<p>Done</p>
