fixtures/parser/invalid/missing_semicolon.php
<?php
// invalid: missing semicolon after echo expression
echo "missing"
